feat: update game modules and cross-platform build tooling